--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@
                 bottom:10px;
                 text-align:center;
                 left:39.72%;
+                color:#6a9f52;
+                font-family: Arial, sans-serif;
             }  
             .CallToAction{
                 position: absolute;
