--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             }
             #copyright {
                 position: absolute;
-                bottom:10px;
+                top:2540px;
                 text-align:center;
                 left:39.72%;
                 color:#6a9f52;
@@ -474,7 +474,7 @@
                 left:20%;
             }
             .RightLine{
-                right:20%;
+                right:0%;
             }
             .InstaLogo, .FaceLogo{
                 width:2vw;
@@ -705,7 +705,7 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
