--- a/index.html
+++ b/index.html
@@ -392,7 +392,8 @@
                 position: absolute;
                 top:2540px;
                 text-align:center;
-                left:39.72%;
+                left: 50%;
+                transform: translateX(-50%);
                 color:#6a9f52;
                 font-family: Arial, sans-serif;
             }  
