--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                 transform: translateX(-50%);
                 color:#6a9f52;
                 font-family: Arial, sans-serif;
+                font-size:1.35vw;
             }  
             .CallToAction{
                 position: absolute;
@@ -454,6 +455,7 @@
                 z-index:2;
                 line-height:.21;
                 top:201vw;
+                font-size:1.4vw;
             }
             .Footer h3, .Footer2 h3{
                 margin-bottom:35px;
@@ -598,10 +600,13 @@
                 }
                 .Footer, .Footer2{  
                     top:2343px;
-                    font-size:1.4vw;
+                    font-size:15px;
                 }
                 .LeftLine, .RightLine{
                     top:2518px;
+                }
+                #copyright { 
+                    font-size:14px
                 }
             }       
             @media screen and (max-width: 920px) { 
@@ -706,7 +711,7 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
