--- a/index.html
+++ b/index.html
@@ -480,13 +480,15 @@
                 right:0%;
             }
             .InstaLogo, .FaceLogo{
-                width:2vw;
+                width:5vw;
+                height:auto;
+                top:-10px;
             }
             .InstaLogo{
-                left:35%;
+                left:55vw;
             }
             .FaceLogo{
-                right:35%;
+                left:45vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
