--- a/index.html
+++ b/index.html
@@ -635,13 +635,14 @@
                     clear: both;
                     border: 8px solid #000000;
                 }
-                #CurrentInitiatives{
-                    left:7%;
+                #CurrentInitiatives{    
+                    left: 50%;
+                    transform: translateX(-50%);        
                     top:1680px;
                 }
                 #InProgress{
                     top:1780px;
-                    left:18%;
+                    left:11%;
                 }
                 #Initiatives{
                     left:9%;
