--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
             }
             #copyright {
                 position: absolute;
-                top:2540px;
                 text-align:center;
                 left: 50%;
+                top:216vw;
                 transform: translateX(-50%);
                 color:#6a9f52;
                 font-family: Arial, sans-serif;
@@ -480,15 +480,15 @@
                 right:0%;
             }
             .InstaLogo, .FaceLogo{
-                width:5vw;
+                width:3.5vw;
                 height:auto;
-                top:-10px;
+                top:207vw;
             }
             .InstaLogo{
-                left:55vw;
+                left:53vw;
             }
             .FaceLogo{
-                left:45vw;
+                left:43vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -605,10 +605,12 @@
                     font-size:15px;
                 }
                 .LeftLine, .RightLine{
-                    top:2518px;
+                    top:2514px;
+                    width:300px;
                 }
                 #copyright { 
                     font-size:14px
+                    top:2540px;
                 }
             }       
             @media screen and (max-width: 920px) { 
