--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 margin: 0;
             }    
             mark {
-              background-color: transparent;
+              background-color: #f7fff6ff;
               color: inherit;
             }
             .icon {
