--- a/index.html
+++ b/index.html
@@ -480,15 +480,15 @@
                 right:0%;
             }
             .InstaLogo, .FaceLogo{
-                width:3.5vw;
+                width:4vw;
                 height:auto;
-                top:207vw;
+                top:209vw;
             }
             .InstaLogo{
-                left:53vw;
+                left:54vw;
             }
             .FaceLogo{
-                left:43vw;
+                left:41vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -611,6 +611,9 @@
                 #copyright { 
                     font-size:14px
                     top:2540px;
+                }
+                .InstaLogo, .FaceLogo{
+                    width:50px;
                 }
             }       
             @media screen and (max-width: 920px) { 
