--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@
                 color: #95dc76;
                 font-family: Arial, sans-serif;
                 z-index:2;
-                line-height:.21;
-                top:201vw;
-                font-size:1.4vw;
+                line-height:.15;
+                top:200vw;
+                font-size:1.38vw;
             }
             .Footer h3, .Footer2 h3{
                 margin-bottom:35px;
@@ -482,13 +482,13 @@
             .InstaLogo, .FaceLogo{
                 width:4vw;
                 height:auto;
-                top:209vw;
+                top:207vw;
             }
             .InstaLogo{
-                left:54vw;
+                left:51vw;
             }
             .FaceLogo{
-                left:41vw;
+                left:42vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -601,19 +601,19 @@
                     top:2205px;
                 }
                 .Footer, .Footer2{  
-                    top:2343px;
-                    font-size:15px;
+                    top:2340px;
+                    font-size:14px;
                 }
                 .LeftLine, .RightLine{
                     top:2514px;
                     width:300px;
                 }
                 #copyright { 
-                    font-size:14px
+                    font-size:14px;
                     top:2540px;
                 }
                 .InstaLogo, .FaceLogo{
-                    width:50px;
+                    width:40px;
                 }
             }       
             @media screen and (max-width: 920px) { 
@@ -719,7 +719,7 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
