--- a/index.html
+++ b/index.html
@@ -480,9 +480,9 @@
                 right:0%;
             }
             .InstaLogo, .FaceLogo{
-                width:3.8vw;
+                width:3.6vw;
                 height:auto;
-                top:209vw;
+                top:212vw;
             }
             .InstaLogo{
                 left:50vw;
@@ -605,7 +605,7 @@
                     font-size:14px;
                 }
                 .LeftLine, .RightLine{
-                    top:2514px;
+                    top:2530px;
                     width:300px;
                 }
                 #copyright { 
@@ -614,6 +614,7 @@
                 }
                 .InstaLogo, .FaceLogo{
                     width:40px;
+                    top:2440px;
                 }
             }       
             @media screen and (max-width: 920px) { 
@@ -719,7 +720,7 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
