--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 position: absolute;
                 text-align:center;
                 left: 50%;
-                top:216vw;
+                top:218vw;
                 transform: translateX(-50%);
                 color:#6a9f52;
                 font-family: Arial, sans-serif;
@@ -469,7 +469,7 @@
                 text-align: left;
             }
             .LeftLine, .RightLine{
-                top: 212vw;
+                top: 213.5vw;
                 background-color:#4f6346;
                 width: 22%;
             }
@@ -605,16 +605,16 @@
                     font-size:14px;
                 }
                 .LeftLine, .RightLine{
-                    top:2520px;
-                    width:270px;
+                    top:2495px;
+                    width:241px;
                 }
                 #copyright { 
                     font-size:14px;
-                    top:2540px;
+                    top:2560px;
                 }
                 .InstaLogo, .FaceLogo{
                     width:40px;
-                    top:2457px;
+                    top:2485px;
                 }
             }       
             @media screen and (max-width: 920px) { 
@@ -653,6 +653,15 @@
                 #Initiatives{
                     left:9%;
                     top:1840px;
+                }
+                .LeftLine, .RightLine{
+                    display:none;
+                }
+                .InstaLogo {
+                    left:52.5vw;
+                } 
+                .FaceLogo {
+                    left:40vw;
                 }
             }
             @media screen and (max-width: 690px) { 
