--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
                 color:#6a9f52;
                 font-family: Arial, sans-serif;
                 font-size:1.35vw;
+                width:100vw;
             }  
             .CallToAction{
                 position: absolute;
@@ -686,6 +687,9 @@
                 }
                 .Involvements ul {
                     font-size: 13px;
+                }
+                #copyright{
+                    font-size:12px;
                 }
             }
         </style>
