--- a/index.html
+++ b/index.html
@@ -617,6 +617,13 @@
                     width:40px;
                     top:2485px;
                 }
+                .FaceLogo{
+                    left:auto;
+                    right:49.9vw;
+                }
+                .InstaLogo{
+                    left:50.8vw;
+                }
             }       
             @media screen and (max-width: 920px) { 
                 #halftone, .BannerButtons, .CustomLeaf {
