--- a/index.html
+++ b/index.html
@@ -491,6 +491,21 @@
             .FaceLogo{
                 left:44.6vw;
             }
+            #FooterLogo{
+                position:absolute;
+                left:20px;
+                top:auto;
+                bottom:20px;
+                width:10vw;
+            }
+            #FooterHalftone{
+                position:absolute;
+                left:auto;
+                top:auto;
+                bottom:0;
+                right:0;
+                width:40vw;
+            }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
                     display: none;
@@ -854,6 +869,8 @@
         <img class = "LeftLine FaceLogo" src="images/FaceLogo.png">
         <img class = "RightLine InstaLogo" src="images/InstaLogo.png">
         <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
+        <img id = "FooterLogo" src="images/FooterLogo.png">
+        <img id = "FooterHalftone" src="images/FooterHalftone.png">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
