--- a/index.html
+++ b/index.html
@@ -494,17 +494,15 @@
             #FooterLogo{
                 position:absolute;
                 left:20px;
-                top:auto;
-                bottom:20px;
+                top:2580px;
                 width:10vw;
             }
             #FooterHalftone{
                 position:absolute;
                 left:auto;
-                top:auto;
-                bottom:0;
+                top:2480px;
                 right:0;
-                width:40vw;
+                width:20vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
