--- a/index.html
+++ b/index.html
@@ -493,16 +493,16 @@
             }
             #FooterLogo{
                 position:absolute;
-                left:20px;
-                top:2580px;
-                width:10vw;
+                left:45px;
+                top:295vh;
+                width:9vw;
             }
             #FooterHalftone{
                 position:absolute;
                 left:auto;
-                top:2480px;
+                top:286.1vh;
                 right:0;
-                width:20vw;
+                width:11.5vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
