--- a/index.html
+++ b/index.html
@@ -494,13 +494,13 @@
             #FooterLogo{
                 position:absolute;
                 left:45px;
-                top:295vh;
+                top:216.6vw;
                 width:9vw;
             }
             #FooterHalftone{
                 position:absolute;
                 left:auto;
-                top:286.1vh;
+                top:209.7vw;
                 right:0;
                 width:11.5vw;
             }
