--- a/index.html
+++ b/index.html
@@ -637,6 +637,15 @@
                 .InstaLogo{
                     left:50.8vw;
                 }
+                #FooterLogo{
+                    top: 2510px;
+                    left:25px;
+                    width:80px;
+                }
+                #FooterHalftone{
+                    top:2450px;
+                    width:150px;
+                }
             }       
             @media screen and (max-width: 920px) { 
                 #halftone, .BannerButtons, .CustomLeaf {
@@ -683,13 +692,16 @@
                 }
             }
             @media screen and (max-width: 690px) { 
-                .ArrowOnLeft, .ArrowOnRight{
+                .ArrowOnLeft, .ArrowOnRight, #FooterHalftone{
                     display: none;
                 }
             }
             @media screen and (max-width: 501px) { 
                 .CallToAction{
                     font-size:19px;
+                }
+                #FooterLogo{
+                    width:60px;
                 }
             }
             @media screen and (max-width: 442px) { 
@@ -710,6 +722,9 @@
                 }
                 #copyright{
                     font-size:12px;
+                }
+                #FooterLogo{
+                    display:none;
                 }
             }
         </style>
