--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,1 +1,430 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1">
+        <title>Environmental Action</title>
+        <meta charset="utf-8">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/gill-sans-mt-2" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            html {
+                overflow-x: hidden !important;
+            }
+            body {
+                overflow-x: hidden !important;
+                background-image: url("images/wiped.svg");
+                background-position: center top;
+                height: 222.280334728vw;
+                min-height: 2600px;
+                background-size: cover;
+                background-attachment: scroll;
+                background-repeat: no-repeat; 
+                overflow-y: hidden;
+                overflow-x: hidden;
+                font-size: 100%;
+                margin: 0;
+            }    
+            mark {
+              background-color: #f7fff6ff;
+              color: inherit;
+            }
+            .icon {
+                color: #F5F5EF !important;
+                background-color: transparent;
+                transition: color 0.3s;
+                margin-top: 21px;
+                margin-right: 1.9vw;
+                padding: 10px 15px;
+                display: block;
+                position: absolute;
+                font-size:3.3rem;
+                right: 0;
+                top: 0;
+                z-index:3;
+            }
+            .LinksMenu {
+                display: block;
+                display: none;
+                position: absolute;
+                right:0px;
+                margin-right: 1.9vw;
+                top: 101px;
+                width: 50vw;
+                padding-top: 2%;
+                padding-bottom:2%;
+                text-decoration: none;
+                font-family: Montserrat;
+                font-weight: 400;
+                line-height:1.6;
+                font-size:1.7rem;
+                background-color: #2C4025;
+                z-index: 3;
+            }
+            .LinksMenu a:hover{
+                background-color: #348138;
+            }
+            .LinksMenu a{
+                color: #F5F5EF !important;
+                text-decoration: none !important;
+                display: inherit !important;
+            }
+            #referencePoint{
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                height: 2px;
+                width: 100%;
+                opacity: 0.0;
+            }
+            #TopBanner{
+                width: 108%;
+                min-width: 1250px;
+                object-fit: cover;
+                height: auto;
+                position: relative;
+                z-index: 1;
+                top: -8px;
+                left: -8px;
+                overflow-x: hidden;
+                padding: 0;
+            }    
+            .logoBox{
+                width: 7.2vw;
+                min-width: 85px;
+                height: auto;
+                position:absolute;
+                z-index: 2;
+                top: clamp(21px, 1.9vw, 800px);
+                left: 1.9vw;
+            }
+            .logoBox img{
+                display:block;
+                margin 0 auto;
+                max-width: 100%;
+                max-height: 100%;
+            }
+            .logoTextBox{
+                width: 16vw;
+                min-width: 178px;
+                height: auto;
+                position:absolute;
+                z-index: 2;
+                top: clamp(26px, 2.85vw, 800px);
+                left: clamp(127px, 10.6vw, 800px);
+            }
+            .logoTextBox img{
+                display:block;
+                margin 0 auto;
+                max-width: 100%;
+                max-height: 100%;
+            }
+            .BannerButtons{
+                position: absolute;
+                border-radius: 9px;
+                border: 4px solid #37512cff;
+                top:8.1vh;
+                font-size: clamp(1rem, 1.5vw,5.5rem);
+                font-family: 'Roboto';
+                text-align: center;
+                display: inline-block;
+                -webkit-transition-duration: 0.4s;
+                transition-duration: 0.4s;
+                text-decoration: none;
+                cursor: pointer;
+                font-weight: bold;
+                z-index: 2;
+                word-wrap: break-word;
+                margin-right: 1.5vw;
+                width:11vw;
+                /*
+                background-color: #F5F5EF;
+                color: #37512cff;
+                */
+                background-color: #37512cff;
+                color: #F5F5EF;
+            }
+            .BannerButtons:hover {
+                box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+            }
+            .ArticlesButton{
+                right: 28vw;
+            }
+            .CampaignsButton{
+                right: 15.5vw;
+            }
+            .AboutUsButton{
+                right: 3vw;
+            }
+            .CustomLeaf{
+                content:url("images/CustomLeaf.png");
+                position: absolute;
+                width: 4.8%;
+                height: auto;
+                z-index: 2;
+            }
+            .LeafOne{
+                right:26.5vw;
+                top:2.6vh;
+                transform: rotate(316deg);
+            }
+            .LeafTwo{
+                right:14.95vw;
+                top:3.93vh;
+                transform: rotate(359deg);
+            }
+            .LeafThree{
+                right:4.6vw;
+                top:11.1vh;
+                transform: rotate(60deg);
+            }
+            #copyright {
+                position: absolute;
+                text-align:center;
+                left: 50%;
+                top:218vw;
+                transform: translateX(-50%);
+                color:#6a9f52;
+                font-family: Arial, sans-serif;
+                font-size:1.35vw;
+                width:100vw;
+            }  
+            .LeftLine, .RightLine{
+                position: absolute;
+                top: 213.5vw;
+                height: 2px;
+                border-width: 0;
+                background-color:#4f6346;
+                width: 22%;
+                left: 36%;
+                text-align: center;
+            }
+            .LeftLine{
+                left:21%;
+            }
+            .RightLine{
+                right:-4%;
+            }
+            .Footer, .Footer2{  
+                position: absolute;
+                padding: 0;
+                margin: 0;
+                color: #95dc76;
+                font-family: Arial, sans-serif;
+                z-index:2;
+                line-height:.08;
+                top:200vw;
+                font-size:1.38vw;
+            }
+            .Footer h3, .Footer2 h3{
+                margin-bottom:35px;
+            }
+            .Footer{
+                right:52%;
+                text-align: right;
+            }
+            .Footer2{
+                left:52%;
+                text-align: left;
+            }
+            .InstaLogo, .FaceLogo{
+                width:3.6vw;
+                height:auto;
+                top:212vw;
+            }
+            .InstaLogo{
+                left:51.1vw;
+            }
+            .FaceLogo{
+                left:44.6vw;
+            }
+            #FooterLogo{
+                position:absolute;
+                left:45px;
+                top:216.6vw;
+                width:9vw;
+            }
+            #FooterHalftone{
+                position:absolute;
+                left:auto;
+                top:209.7vw;
+                right:0;
+                width:11.5vw;
+            }
+            @media screen and (min-width: 921px) {
+                .LinksMenu, .icon {
+                    display: none;
+                }
+            }
+            @media screen and (max-width: 1152px) { 
+                .Footer, .Footer2{  
+                    top:2340px;
+                    font-size:14px;
+                }
+                .LeftLine, .RightLine{
+                    top:2495px;
+                    width:241px;
+                }
+                #copyright { 
+                    font-size:14px;
+                    top:2560px;
+                }
+                .InstaLogo, .FaceLogo{
+                    width:40px;
+                    top:2485px;
+                }
+                .FaceLogo{
+                    left:auto;
+                    right:49.9vw;
+                }
+                .InstaLogo{
+                    left:50.8vw;
+                }
+                #FooterLogo{
+                    top: 2510px;
+                    left:25px;
+                    width:80px;
+                }
+                #FooterHalftone{
+                    top:2450px;
+                    width:150px;
+                }
+            }       
+            @media screen and (max-width: 920px) { 
+                #halftone, .BannerButtons, .CustomLeaf {
+                    display: none !important;
+                }
+                .LeftLine, .RightLine{
+                    visibility: hidden;
+                }
+                .InstaLogo, .FaceLogo{
+                    visibility: visible !important;
+                }
+            }
+            @media screen and (max-width: 690px) { 
+                #FooterHalftone{
+                    display: none;
+                }
+            }
+            @media screen and (max-width: 501px) { 
+                #FooterLogo{
+                    width:60px;
+                }
+            }
+            @media screen and (max-width: 376px){
+                #copyright{
+                    font-size:12px;
+                }
+                #FooterLogo{
+                    display:none;
+                }
+            }
+        </style>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <link rel="icon" type="image/png" href="roundbg.png?v=2" />
+    </head>
+    <body style="background-color:White;">
+        <img id = "TopBanner" src="images/TopBanner.png">
+        <img id = "halftone" src="images/halftone.svg">
+        <div class="LinksMenu">
+            <a href="#articles" style="padding-left: 12%;">Articles</a>
+            <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
+            <a href="#about" style="padding-left: 12%;">About Us</a>
+        </div>
+        <a href="#" class="icon">
+            <i class="fa fa-bars"></i>
+        </a>
+        <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
+            <div class="logoBox">
+                <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+            </div>
+            <div class="logoTextBox">
+                <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
+            </div>
+        </a>
+        <img id = "referencePoint" src="images/CustomLeaf.png">
+        <button class="BannerButtons ArticlesButton">Articles
+        </button>
+        <button class="BannerButtons CampaignsButton">Campaigns
+        </button>
+        <button class="BannerButtons AboutUsButton">About Us
+        </button>
+        <img class = "CustomLeaf LeafOne"/>
+        <img class = "CustomLeaf LeafTwo"/>
+        <img class = "CustomLeaf LeafThree"/>
+        <div class="Footer">
+            <h3>About</h3>
+            <p>
+                <a>About us</a> 
+                <p><br></p>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+            </p>
+        </div>
+        <div class="Footer2">
+            <h3>Contact</h3>
+            <p>
+                <a href = "Saratoga.eac@gmail.com">Email</a> 
+                <p><br></p>
+                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a> 
+                <p><br></p>
+                <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
+            </p>
+        </div>
+        <hr class = "RightLine">
+        <hr class = "LeftLine">
+        <img class = "LeftLine FaceLogo" src="images/FaceLogo.png">
+        <img class = "RightLine InstaLogo" src="images/InstaLogo.png">
+        <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
+        <img id = "FooterLogo" src="images/FooterLogo.png">
+        <img id = "FooterHalftone" src="images/FooterHalftone.png">
+        <script>
+            <!--JQuery imported because convenient-->
+            $(document).ready(function(){
+                var element = document.querySelector('#referencePoint');
+                element.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            });
+            $('#canvas').mousedown(function(){          
+                $(this).css('cursor','move');
+                return false;       
+            });
+            window.addEventListener("keydown", function(e) {
+                if(e.key.startsWith("Arrow")) {
+                    e.preventDefault();
+                }
+            }, false);
+            document.querySelector(".icon").addEventListener('click', function(event) {
+                dropdown();
+                event.stopPropagation();
+            });
+            document.querySelector('.icon').addEventListener('click', function(event) {
+                event.stopPropagation();
+            });
+            function dropdown() {
+                var linksMenu = document.querySelector(".LinksMenu");
+                var icon = document.querySelector(".icon");
+                if (linksMenu.style.display === "block") {
+                    linksMenu.style.display = "none";
+                    icon.style.backgroundColor = "transparent";
+                } else {
+                    linksMenu.style.display = "block";
+                    icon.style.backgroundColor = "black";
+                }
+            }
+            document.addEventListener('click', function(event) {
+                const linksMenu = document.querySelector('.LinksMenu');
+                if (linksMenu.style.display === 'block' && !event.target.closest('.icon')) {
+                    linksMenu.style.display = 'none';
+                    document.querySelector('.icon').style.backgroundColor = 'transparent';
+                }
+            });
+            $(window).resize(function() {
+                if ($(window).width() > 920) {
+                    $('.LinksMenu').hide();
+                    $('.icon').css('background-color', 'transparent');
+                }
+            });
+        </script>
+    </body>
+</html>
