--- a/index.html
+++ b/index.html
@@ -765,17 +765,17 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
             <h3>Contact</h3>
             <p>
-                <a href = "Saratoga.eac@gmail.com">Email</a> 
+                <a href = "Saratoga.eac@gmail.com" target="_blank">Email</a> 
                 <p><br></p>
-                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a> 
+                <a href= "https://www.facebook.com/groups/334285765697491/" target="_blank">Facebook</a> 
                 <p><br></p>
-                <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
+                <a href= "https://www.instagram.com/eac_shs/" target="_blank">Instagram</a>
             </p>
         </div>
         <div class="introduction">
@@ -825,10 +825,10 @@
             <div class = "TransparentBoxes box2">
                 <section class = "Involvements">
                     <p>
-                    Visit our <a href="https://linktr.ee/environmental_action_club" style="display: inline;">linktree</a>
+                    Visit our <a href="https://linktr.ee/environmental_action_club" target="_blank" style="display: inline; ">linktree</a>
                     </p>
                     <ul>
-                      <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8" style="display: inline;">sign up directly</a></li>
+                      <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8" target="_blank" style="display: inline;">sign up directly</a></li>
                     </ul>
                     <p>Questions</p>
                     <ul>
@@ -839,8 +839,8 @@
                     </ul>
                     <p>Socials</p>
                     <ul>
-                        <li><a href="https://www.facebook.com/groups/334285765697491/" style = "display:inline;">Facebook</a></li>
-                        <li><a href ="https://www.instagram.com/eac_shs/" style = "display:inline;">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/groups/334285765697491/" target="_blank" style = "display:inline;">Facebook</a></li>
+                        <li><a href ="https://www.instagram.com/eac_shs/" target="_blank" style = "display:inline;">Instagram</a></li>
                     </ul>
                 </section>
                 <div class = "TransparencyGradients"></div>
@@ -873,7 +873,7 @@
             <li>AB1423 (PFAS Ban) passed floor vote 9/14/23</li>
             <li>SB499 (Heat Mitigation) and AB38 (Night Sky)</li>
         </ul>
-        <p class = "CallToAction">For sign-ups, social media, petitions and more:<br><i>Join us <a href = "https://linktr.ee/environmental_action_club">here</a></i></p>
+        <p class = "CallToAction">For sign-ups, social media, petitions and more:<br><i>Join us <a href = "https://linktr.ee/environmental_action_club" target="_blank">here</a></i></p>
         <hr id = "horizline">
         <img class = "CallToAction ArrowOnLeft" src="images/LeftArrow.png">
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
