--- a/about-us/index.html
+++ b/about-us/index.html
@@ -359,17 +359,17 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
             <h3>Contact</h3>
             <p>
-                <a href = "Saratoga.eac@gmail.com">Email</a> 
+                <a href = "Saratoga.eac@gmail.com" target="_blank">Email</a> 
                 <p><br></p>
-                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a> 
+                <a href= "https://www.facebook.com/groups/334285765697491/" target="_blank">Facebook</a> 
                 <p><br></p>
-                <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
+                <a href= "https://www.instagram.com/eac_shs/" target="_blank">Instagram</a>
             </p>
         </div>
         <hr class = "RightLine">
