--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         <div class="LinksMenu">
             <a href="#articles" style="padding-left: 12%;">Articles</a>
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
-            <a href="#about" style="padding-left: 12%;">About Us</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
             <i class="fa fa-bars"></i>
@@ -755,8 +755,10 @@
         </button>
         <button class="BannerButtons CampaignsButton">Campaigns
         </button>
-        <button class="BannerButtons AboutUsButton">About Us
-        </button>
+        <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/">
+            <button class="BannerButtons AboutUsButton">About Us
+            </button>
+        </a>
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
@@ -771,7 +773,7 @@
         <div class="Footer2">
             <h3>Contact</h3>
             <p>
-                <a href = "Saratoga.eac@gmail.com" target="_blank">Email</a> 
+                <p>saratoga.eac@gmail.com</p> 
                 <p><br></p>
                 <a href= "https://www.facebook.com/groups/334285765697491/" target="_blank">Facebook</a> 
                 <p><br></p>
@@ -882,7 +884,7 @@
         <img class = "LeftLine FaceLogo" src="images/FaceLogo.png">
         <img class = "RightLine InstaLogo" src="images/InstaLogo.png">
         <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
-        <img id = "FooterLogo" src="images/FooterLogo.png">
+        <a href="https://li21rich.github.io/SHSEnvironmentalAction/"><img id = "FooterLogo" src="images/FooterLogo.png"></a>
         <img id = "FooterHalftone" src="images/FooterHalftone.png">
         <script>
             <!--JQuery imported because convenient-->
