--- a/index.html
+++ b/index.html
@@ -755,10 +755,10 @@
         </button>
         <button class="BannerButtons CampaignsButton">Campaigns
         </button>
-        <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/">
-            <button class="BannerButtons AboutUsButton">About Us
+        <form>
+            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/about-us/">About Us
             </button>
-        </a>
+        </form>
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
