--- a/index.html
+++ b/index.html
@@ -881,8 +881,8 @@
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
         <hr class = "RightLine">
         <hr class = "LeftLine">
-         <a href="https://www.facebook.com/groups/334285765697491/"><img class = "LeftLine FaceLogo" src="images/FaceLogo.png"></a>
-         <a href="https://www.instagram.com/eac_shs/"><img class = "RightLine InstaLogo" src="images/InstaLogo.png"></a>
+         <a href="https://www.facebook.com/groups/334285765697491/" target="_blank"><img class = "LeftLine FaceLogo" src="images/FaceLogo.png"></a>
+         <a href="https://www.instagram.com/eac_shs/" target="_blank"><img class = "RightLine InstaLogo" src="images/InstaLogo.png"></a>
         <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/"><img id = "FooterLogo" src="images/FooterLogo.png"></a>
         <img id = "FooterHalftone" src="images/FooterHalftone.png">
