--- a/about-us/index.html
+++ b/about-us/index.html
@@ -15,7 +15,7 @@
             }
             body {
                 overflow-x: hidden !important;
-                background-image: url("images/wiped.svg");
+                background-image: url("/SHSEnvironmentalAction/images/wiped.svg");
                 background-position: center top;
                 height: 222.280334728vw;
                 min-height: 2600px;
@@ -159,7 +159,7 @@
                 right: 3vw;
             }
             .CustomLeaf{
-                content:url("images/CustomLeaf.png");
+                content:url("/SHSEnvironmentalAction/images/CustomLeaf.png");
                 position: absolute;
                 width: 4.8%;
                 height: auto;
@@ -326,8 +326,8 @@
         <link rel="icon" type="image/png" href="roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
-        <img id = "TopBanner" src="images/TopBanner.png">
-        <img id = "halftone" src="images/halftone.svg">
+        <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner.png">
+        <img id = "halftone" src="/SHSEnvironmentalAction/images/halftone.svg">
         <div class="LinksMenu">
             <a href="#articles" style="padding-left: 12%;">Articles</a>
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
@@ -338,13 +338,13 @@
         </a>
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
-                <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+                <img src="/SHSEnvironmentalAction/images/birdgreen.svg" alt="Environmental Action Club Logo">
             </div>
             <div class="logoTextBox">
-                <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
+                <img src="/SHSEnvironmentalAction/images/BrandText.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
-        <img id = "referencePoint" src="images/CustomLeaf.png">
+        <img id = "referencePoint" src="/SHSEnvironmentalAction/images/CustomLeaf.png">
         <button class="BannerButtons ArticlesButton">Articles
         </button>
         <button class="BannerButtons CampaignsButton">Campaigns
@@ -376,11 +376,11 @@
         </div>
         <hr class = "RightLine">
         <hr class = "LeftLine">
-         <a href="https://www.facebook.com/groups/334285765697491/" target="_blank"><img class = "LeftLine FaceLogo" src="images/FaceLogo.png"></a>
-         <a href="https://www.instagram.com/eac_shs/" target="_blank"><img class = "RightLine InstaLogo" src="images/InstaLogo.png"></a>
+         <a href="https://www.facebook.com/groups/334285765697491/" target="_blank"><img class = "LeftLine FaceLogo" src="/SHSEnvironmentalAction/images/FaceLogo.png"></a>
+         <a href="https://www.instagram.com/eac_shs/" target="_blank"><img class = "RightLine InstaLogo" src="/SHSEnvironmentalAction/images/InstaLogo.png"></a>
         <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
-        <a href="https://li21rich.github.io/SHSEnvironmentalAction/"><img id = "FooterLogo" src="images/FooterLogo.png"></a>
-        <img id = "FooterHalftone" src="images/FooterHalftone.png">
+        <a href="https://li21rich.github.io/SHSEnvironmentalAction/"><img id = "FooterLogo" src="/SHSEnvironmentalAction/images/FooterLogo.png"></a>
+        <img id = "FooterHalftone" src="/SHSEnvironmentalAction/images/FooterHalftone.png">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
