--- a/about-us/index.html
+++ b/about-us/index.html
@@ -326,7 +326,7 @@
         <link rel="icon" type="image/png" href="roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
-        <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner.png">
+        <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner.svg">
         <div class="LinksMenu">
             <a href="#articles" style="padding-left: 12%;">Articles</a>
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
