--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             }
             body {
                 overflow-x: hidden !important;
-                background-image: url("images/wiped.svg");
+                background-image: url("images/wiped2.svg");
                 background-position: center top;
                 height: 222.280334728vw;
                 min-height: 2600px;
