--- a/index.html
+++ b/index.html
@@ -744,10 +744,10 @@
         </a>
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
-                <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+                <img src="images/birdgreen2.svg" alt="Environmental Action Club Logo">
             </div>
             <div class="logoTextBox">
-                <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
+                <img src="images/BrandText2.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
         <img id = "referencePoint" src="images/CustomLeaf.png">
