--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner2.svg">
-        <img id = "halftone" src="images/halftone2.svg">
+        <img id = "halftone" src="images/halftone2.png">
         <div class="LinksMenu">
             <a href="#articles" style="padding-left: 12%;">Articles</a>
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
