--- a/about-us/index.html
+++ b/about-us/index.html
@@ -229,6 +229,10 @@
                 left:52%;
                 text-align: left;
             }
+            .Footer a, .Footer2 a {
+                color: #bcff9d !important;
+                text-decoration:underline;
+            }
             .InstaLogo, .FaceLogo{
                 width:3.6vw;
                 height:auto;
