--- a/about-us/index.html
+++ b/about-us/index.html
@@ -258,9 +258,11 @@
                 width:11.5vw;
             }
             .gallery {
-                padding-bottom:5vw;
+                margin-bottom:5vw;
+                margin-left:5vw;
                 width: 90vw;
-                padding-left:5vw;
+                padding-top:3vw;
+                padding-bottom:1.3vw;
             }
             .name {
                 position:absolute;
@@ -271,6 +273,17 @@
                 display:inline-block;
                 font-weight: bold;
                 border: 2px solid #000;
+                font-family: Montserrat;
+            }
+            .grade{
+                position:absolute;
+                padding: .5vw;
+                margin-left: 5.1vw;
+                margin-top:1vw;
+                font-size:1.9vw;
+                display:inline-block;
+                border: 1px solid #000;
+                font-family: Comfortaa;
             }
             .gallery img {
                 width: 40%;
@@ -391,18 +404,62 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <div class="gallery">
-            <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
-                <img src="/SHSEnvironmentalAction/images/CustomLeaf.png">
-            </a>
-            <p class="name">President: Nicole Lee</p>
+        
+        <div class = "container">
+            <div class="gallery">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                </a>
+                <p class="name">President: Nicole Lee</p>
+                <p class="grade">Grade: 11</p>
+                <p class="desc">“I think it’s really important for the youth to become more knowledgeable about the world’s environmental issues, and to speak up about their thoughts to advocate for changes they want to make.
+                    Through this club, I hope we can make positive environmental changes and I hope people can become more confident in expressing their opinions, especially at a legislative and governmental level.”<br><br>
+                    Fun Fact: Nicole has over ten chickens. But it doesn’t stop there. She also has two dogs. Wait, it doesn’t stop there. She also has two dogs!!
+                </p>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                </a>
+                <p class="name">Vice President: Neha Tadikamalla</p>
+                <p class="grade"Grade: 11</p>
+                <p class="desc">“I joined the EAC club because of inspiration from the people around me taking action. Knowing that youth can make a change made me want to make a change in our cities and legislation.”<br><br>
+                    Fun Fact: Neha loves photography especially taking pictures of her favorite muse, food. :))
+                </p>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                </a>
+                <p class="name">Secretary: Aiden Chen</p>
+                <p class="grade">Grade: 11</p>
+                <p class="desc">“It is of the utmost gravity and importance that we ought to ensure the indelible persistence of bird populations.”<br><br>
+                    Fun Fact: Aiden writes like an old man.
+                </p>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                </a>
+                <p class="name">Webmaster: Richard Li</p>
+                <p class="grade">Grade: 11</p>
+                <p class="desc">“What I like most about our club is how we emphasize genuine action. In a time where many of us may feel unheard, it should be even more important to strive for change,
+                    whether it be in direct opposition to this conceptual blanket of silence or as part of a larger movement for good.”<br><br>
+                    Fun Fact: Richard has eaten more strawberries than the entire population of Canada.
+                </p>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                </a>
+                <p class="name">Treasurer: Willis Chung</p>
+                <p class="grade">Grade: 10</p>
+                <p class="desc">“I wanted to do something for the environment.”<br><br>
+                    Fun Fact: Willis is fluent in 4 languages: French, Chinese, Taiwanese, and English.
+                </p>
+            </div>
         </div>
-        <div class="gallery">
-            <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
-                <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
-            </a>
-            <p class="name">Vice President: Neha Tadikonda</p>
-        </div>
+        
         <div class="clearfix"></div>
         <div class="Footer">
             <h3>About</h3>
