--- a/about-us/index.html
+++ b/about-us/index.html
@@ -257,6 +257,10 @@
                 right:0;
                 width:11.5vw;
             }
+            .container{
+                width:80vw;
+                top:20vw;
+            }
             .gallery {
                 margin-bottom:5vw;
                 margin-left:5vw;
@@ -278,15 +282,24 @@
             .grade{
                 position:absolute;
                 padding: .5vw;
-                margin-left: 5.1vw;
-                margin-top:1vw;
+                margin-left: 15.1vw;
+                margin-top:1.3vw;
                 font-size:1.9vw;
                 display:inline-block;
                 border: 1px solid #000;
                 font-family: Comfortaa;
             }
+            .desc{
+                position:absolute;
+                padding: .7vw;
+                margin-left: 2.1vw;
+                margin-top:4vw;
+                font-size:1vw;
+                display:inline-block;
+                font-family: Montserrat;
+            }
             .gallery img {
-                width: 40%;
+                width: 37%;
                 height: auto;
                 border: 5px solid #000;
                 opacity:1;
@@ -422,7 +435,7 @@
                     <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
                 </a>
                 <p class="name">Vice President: Neha Tadikamalla</p>
-                <p class="grade"Grade: 11</p>
+                <p class="grade">Grade: 11</p>
                 <p class="desc">“I joined the EAC club because of inspiration from the people around me taking action. Knowing that youth can make a change made me want to make a change in our cities and legislation.”<br><br>
                     Fun Fact: Neha loves photography especially taking pictures of her favorite muse, food. :))
                 </p>
