--- a/about-us/index.html
+++ b/about-us/index.html
@@ -385,7 +385,7 @@
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <link rel="icon" type="image/png" href="roundbg.png?v=2" />
+        <link rel="icon" type="image/png" href="SHSEnvironmentalAction/roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner2.svg">
