--- a/about-us/index.html
+++ b/about-us/index.html
@@ -262,9 +262,9 @@
                 top:20vw;
             }
             .gallery {
-                margin-bottom:5vw;
+                margin-bottom:60px;
                 margin-left:5vw;
-                width: 90vw;
+                width: 78vw;
                 padding-top:3vw;
                 padding-bottom:1.3vw;
             }
@@ -282,8 +282,8 @@
             .grade{
                 position:absolute;
                 padding: .5vw;
-                margin-left: 15.1vw;
-                margin-top:1.3vw;
+                margin-left: 28vw;
+                margin-top:1.6vw;
                 font-size:1.9vw;
                 display:inline-block;
                 border: 1px solid #000;
@@ -293,13 +293,13 @@
                 position:absolute;
                 padding: .7vw;
                 margin-left: 2.1vw;
-                margin-top:4vw;
+                margin-top:6vw;
                 font-size:1vw;
                 display:inline-block;
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 37%;
+                width: 33%;
                 height: auto;
                 border: 5px solid #000;
                 opacity:1;
