--- a/about-us/index.html
+++ b/about-us/index.html
@@ -273,17 +273,18 @@
                 padding: .5vw;
                 margin-left: 2.1vw;
                 margin-top:1vw;
-                font-size:2.8vw;
+                font-size:2.6vw;
                 display:inline-block;
                 font-weight: bold;
                 border: 2px solid #000;
                 font-family: Montserrat;
             }
             .grade{
-                position:absolute;
+                position:relative;
+                float:right;
                 padding: .5vw;
-                margin-left: 28vw;
-                margin-top:1.6vw;
+                margin-top:1.5vw;
+                margin-right:-8vw;
                 font-size:1.9vw;
                 display:inline-block;
                 border: 1px solid #000;
@@ -294,12 +295,12 @@
                 padding: .7vw;
                 margin-left: 2.1vw;
                 margin-top:6vw;
-                font-size:1vw;
+                font-size:1.5vw;
                 display:inline-block;
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 33%;
+                width: 38%;
                 height: auto;
                 border: 5px solid #000;
                 opacity:1;
@@ -425,9 +426,9 @@
                 </a>
                 <p class="name">President: Nicole Lee</p>
                 <p class="grade">Grade: 11</p>
-                <p class="desc">“I think it’s really important for the youth to become more knowledgeable about the world’s environmental issues, and to speak up about their thoughts to advocate for changes they want to make.
-                    Through this club, I hope we can make positive environmental changes and I hope people can become more confident in expressing their opinions, especially at a legislative and governmental level.”<br><br>
-                    Fun Fact: Nicole has over ten chickens. But it doesn’t stop there. She also has two dogs. Wait, it doesn’t stop there. She also has two dogs!!
+                <p class="desc">“I think it’s really important for the youth to become more knowledgeable about the world’s environmental<br>issues, and to speak up about their thoughts to advocate for changes they want to make.
+                    Through this club, I hope we can make positive environmental<br>changes and I hope people can become more confident in expressing their opinions, especially at a legislative<br>and governmental level.”<br><br>
+                    Fun Fact: Nicole has over ten chickens. But it doesn’t stop there. She also has two dogs.<br>Wait, it doesn’t stop there. She also has two dogs!!
                 </p>
             </div>
             <div class="gallery">
@@ -436,7 +437,7 @@
                 </a>
                 <p class="name">Vice President: Neha Tadikamalla</p>
                 <p class="grade">Grade: 11</p>
-                <p class="desc">“I joined the EAC club because of inspiration from the people around me taking action. Knowing that youth can make a change made me want to make a change in our cities and legislation.”<br><br>
+                <p class="desc">“I joined the EAC club because of inspiration from the people around me taking action.<br>Knowing that youth can create impact made me want to make a change in our cities and legislation.”<br><br>
                     Fun Fact: Neha loves photography especially taking pictures of her favorite muse, food. :))
                 </p>
             </div>
@@ -456,8 +457,8 @@
                 </a>
                 <p class="name">Webmaster: Richard Li</p>
                 <p class="grade">Grade: 11</p>
-                <p class="desc">“What I like most about our club is how we emphasize genuine action. In a time where many of us may feel unheard, it should be even more important to strive for change,
-                    whether it be in direct opposition to this conceptual blanket of silence or as part of a larger movement for good.”<br><br>
+                <p class="desc">“What I like most about our club is how we emphasize genuine action. In a time where many of us<br>may feel unheard, it should be even more important to strive for change,
+                    whether it be in direct opposition to this<br>conceptual blanket of silence or as part of a larger movement for good.”<br><br>
                     Fun Fact: Richard has eaten more strawberries than the entire population of Canada.
                 </p>
             </div>
