--- a/about-us/index.html
+++ b/about-us/index.html
@@ -262,18 +262,20 @@
                 top:20vw;
             }
             .gallery {
+                position:relative;
                 margin-bottom:60px;
-                margin-left:5vw;
-                width: 78vw;
+                margin-left:7vw;
+                width: 86vw;
                 padding-top:3vw;
                 padding-bottom:1.3vw;
             }
             .name {
-                position:absolute;
-                padding: .5vw;
-                margin-left: 2.1vw;
+                position:relative;
+                float:right;
+                padding: .6vw;
+                margin-right: 15vw;
                 margin-top:1vw;
-                font-size:2.6vw;
+                font-size:2.3vw;
                 display:inline-block;
                 font-weight: bold;
                 border: 2px solid #000;
@@ -283,7 +285,7 @@
                 position:relative;
                 float:right;
                 padding: .5vw;
-                margin-top:1.5vw;
+                margin-top:1.34vw;
                 margin-right:-8vw;
                 font-size:1.9vw;
                 display:inline-block;
@@ -292,15 +294,15 @@
             }
             .desc{
                 position:absolute;
-                padding: .7vw;
+                padding: .5vw;
                 margin-left: 2.1vw;
                 margin-top:6vw;
-                font-size:1.5vw;
+                font-size:1.4vw;
                 display:inline-block;
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 38%;
+                width: 28%;
                 height: auto;
                 border: 5px solid #000;
                 opacity:1;
@@ -427,7 +429,7 @@
                 <p class="name">President: Nicole Lee</p>
                 <p class="grade">Grade: 11</p>
                 <p class="desc">“I think it’s really important for the youth to become more knowledgeable about the world’s environmental issues, and to speak up about their thoughts to advocate for changes they want to make.
-                    Through this club, I hope we can make positive environmentalchanges and I hope people can become more confident in expressing their opinions, especially at a legislative<br>and governmental level.”<br><br>
+                    Through this club, I hope we can make positive environmental changes and I hope people can become more confident in expressing their opinions, especially at a legislative<br>and governmental level.”<br><br>
                     Fun Fact: Nicole has over ten chickens. But it doesn’t stop there. She also has two dogs.Wait, it doesn’t stop there. She also has two dogs!!
                 </p>
             </div>
